Remove debug, fix haste score list alignment

--- a/app/javascript/game_modes/base.sass
+++ b/app/javascript/game_modes/base.sass
@@ -236,7 +236,6 @@
     .list
       display: flex
       flex-direction: column
-      align-items: center
       gap: 8px
     
     .high-score
